// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<form
  class="Form"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="FormLabel"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="FormLabel__required-text"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="HelpText TextField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with an additional class name 1`] = `
<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="FormLabel"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="FormLabel__required-text"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="HelpText TextField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with condensed spacing 1`] = `
<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--condensed"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="FormLabel"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
          <span
            class="FormLabel__required-text"
          >
            (
            required
            )
          </span>
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="HelpText TextField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;
